--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -23,3 +23,13 @@ header, footer{
 h1{
     font-size: 40px;
 }
+h2{
+    font-size: 32px;
+}
+h3{
+    font-size: 24px;
+}
+#grid-container{
+    display: grid;
+    grid-template-columns: 1.5fr 5fr;
+}
