--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -11,7 +11,7 @@ body{
     color: #222;
 }
 header, footer, div{
-    width: 1000px;
+    width: 1000px center;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
