--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -12,6 +12,7 @@ body{
 }
 header, footer, div{
     width: 1000px center;
+    text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: auto;
