--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -60,7 +60,7 @@ nav a{
     font-weight: bold;
     font-size: 20px;
 }
-a:hover{
+nav a:hover{
     background-color: #fff;
     color: #8c1d40;
 }
