--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -73,4 +73,12 @@ main a{
 }
 main a:hover{
     background-color: #8c1d40;
+    color: #fff;
+    padding: 4px;
+}
+p, q{
+    color: #444;
+}
+q{
+    font-display: italic;
 }
