--- a/Bergstrom_Sparky_Styles.css
+++ b/Bergstrom_Sparky_Styles.css
@@ -93,3 +93,17 @@ footer h2{
     font-size: 24px;
     margin: 8px;
 }
+address{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+}
+footer a{
+    color: #fff;
+    display: inline-block;
+    padding-top: 8px;
+    padding-bottom: 16px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-weight: normal;
+}
